refactor: modernize domain model and optimize move logic